recursion.lessons.recursion.tree.Tree.scala.error
Tree:13: error: expected class or object definition
	def subtree(steps:Int, length:Double, angle:Double, shrink:Double)	{
        ^Tree:27: error: expected start of definition
	override def run() {
                 ^Tree:31: error: Unmatched closing brace '}' ignored here
}
^